css/main.css
html {
  background-color: #e2e2e2;

  font-family: sans-serif;
}

body {
  top: 100px;
  left: 250px;

}

.polaroid {
  position: absolute;
  margin: 0;
  padding: 10px;
  width: 250px;
  transition: linear 200ms all;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: 1px 4px 6px rgba(0, 0, 0, .5);
}

.polaroid > img {
  display: block;
  width: 100%;
}

.polaroid > figcaption {
  position: absolute;
  bottom: 20px;
  left: 75px;
  color: #fff;
  text-shadow: 1px 1px 3px #000;

}

.polaroid:first-child {
  left: 30%;
  top: 20%;
  transform: rotate(-10deg);
}

.polaroid:nth-child(2) {
  z-index: 4;
  left: 40%;
  top: 25%;
  transform: rotate(5deg);
}

.polaroid:last-child {
  left: 50%;
  top: 20%;
  transform: rotate(30deg);
}

.polaroid:hover {
  box-shadow: 4px 12px 16px rgba(0, 0, 0, .5);
  z-index: 100;
  transform: rotate(0deg);
}

